@@ -1,0 +1,31 @@
+verilog/inc2.v:1: `line 1 "verilog/inc1.v" 1
+verilog/inc2.v:1: `line 1 "verilog/inc1.v" 0
+verilog/inc2.v:1: `line 1 "verilog/inc2.v" 1
+verilog/inc2.v:4: At file verilog/inc2.v line 4
+verilog/inc3.v:1: `line 5 "verilog/inc2.v" 0
+verilog/inc3.v:1: `line 1 "verilog/inc3.v" 1
+inc3_a_filename_from_line_directive:10:  At file inc3_a_filename_from_line_directive line 10
+inc3_a_filename_from_line_directive:13: `line 13 "inc3_a_filename_from_line_directive" 0
+inc3_a_filename_from_line_directive:17: `line 17 "inc3_a_filename_from_line_directive" 0
+inc3_a_filename_from_line_directive:18: `line 18 "inc3_a_filename_from_line_directive" 2
+inc3_a_filename_from_line_directive:18: `line 5 "verilog/inc2.v" 0
+verilog/inc2.v:6: `line 6 "verilog/inc2.v" 2
+verilog/inc2.v:6: `line 1 "verilog/inc1.v" 0
+verilog/inc1.v:4:  text.
+verilog/inc1.v:8:  foo bar 
+verilog/inc1.v:9:  foobar2 
+verilog/inc1.v:15:  first part second part 
+verilog/inc1.v:22:   deep  deep 
+verilog/inc1.v:26: "Inside: `nosubst"
+verilog/inc1.v:27:  "`nosubst" 
+verilog/inc1.v:30:  x y LLZZ x y 
+verilog/inc1.v:31:   p q LLZZ p q   r s LLZZ r s LLZZ  p q LLZZ p q   r s LLZZ r s 
+verilog/inc1.v:33:  firstline comma","line LLZZ firstline comma","line 
+verilog/inc1.v:36:  x y LLZZ "a" y 
+verilog/inc1.v:39:  (a,b) (a,b)
+verilog/inc1.v:42: $display( "left side: \" right side\"" )
+verilog/inc1.v:45:  bar_suffix 
+verilog/inc1.v:49:  $c("Zap(\"",bug1,"\");"); ;
+verilog/inc1.v:50:  $c("Zap(\"","bug2","\");"); ;
+verilog/inc1.v:58: `line 58 "verilog/inc1.v" 0
+verilog/inc1.v:59: `line 59 "verilog/inc1.v" 2
